add js functions and images for computer choice

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,8 @@ body {
 
 .game-area {
     background-color: #C2F9FF;
-    width: 80%;
-    height: 65vh;
+    width: 70%;
+    height:300px;
     margin-left: auto;
     margin-right: auto;
     padding: 1%;
