--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,14 +35,22 @@ button {
 
 button:hover,
 button:focus {
-  background-color: #b3d3ea;
+  background-color: #C2F9FF;
   color: #325082;
 }
 
 button:active {
   background-color: #325082;
   box-shadow: none;
-  color: #b3d3ea;
+  color: #C2F9FF;
+}
+
+/*Info */
+
+.info {
+    color: #325082 ;
+    text-shadow: 10px 5px 5px #C2F9FF;
+    
 }
 
 
@@ -51,11 +59,11 @@ button:active {
 .social-networks {
     background-color: #C2F9FF;
     border-top: solid #325082 1px;
-    position: fixed;
+    position:absolute;
+    font-size: 20px;
+    height: 60px;
     width: 100%;
-    bottom: 0;
     left: 0;
-    margin: 0;
     box-sizing: border-box;
     text-align: center; 
 }
