--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,22 +50,25 @@ button:active {
 .info {
     color: #325082 ;
     text-shadow: 10px 5px 5px #C2F9FF;
-    
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2%;
+    text-align: center;
 }
 
 
 /* Footer */
 
 .social-networks {
-    background-color: #C2F9FF;
-    border-top: solid #325082 1px;
-    position:absolute;
+    
+    border-top: solid #325082 2px;
     font-size: 20px;
-    height: 60px;
+    bottom: 0;
     width: 100%;
     left: 0;
-    box-sizing: border-box;
     text-align: center; 
+    padding: 5px;
 }
 
 .social-networks > li {
