--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: whitesmoke;
+    background-color: #CCE8E5;
     font-family: 'Macondo', cursive, sans-serif;
     color: #325082;
     text-align: center;
@@ -8,10 +8,6 @@ body {
 /*Game Area*/
 
 .game-area {
-    box-shadow: 10px 5px 5px #325082;
-    box-sizing: border-box;
-    border: solid  #325082 2px;
-    background-color: #C2F9FF;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -25,8 +21,8 @@ button {
     font-family: 'Macondo', cursive, sans-serif;
     font-weight: bold;
     background-color: whitesmoke;
-    border-radius: 3px;
-    border: 1px solid #325082;
+    border-radius: 25px;
+    border: 5px solid #325082;
     box-shadow: rgba(255, 255, 255, .7) 0 1px 0 0 inset;
     box-sizing: border-box;
     color: #325082;
@@ -64,7 +60,7 @@ button:active {
     
     border-top: solid #325082 2px;
     font-size: 20px;
-    bottom: 0;
+    margin-bottom: 0;
     width: 100%;
     left: 0;
     text-align: center; 
